bad cloud build

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,6 +5,6 @@ steps:
   args: ['push', 'gcr.io/micka-cloud-run-365208/golang-app']
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'golang-app', '--image', 'gcr.io/micka-cloud-run-365208/golang-app', '--region', 'europe-west6']
+  args: ['' 'gcr.io/micka-cloud-run-365208/golang-app', '--region', 'europe-west6']
 images:
 - gcr.io/micka-cloud-run-365208/golang-app
