another cloud build in another region

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,11 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/micka-cloud-run-365208/golang-app', '.']
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/micka-cloud-run-365208/golang-app']
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: gcloud
-  args: ['' 'gcr.io/micka-cloud-run-365208/golang-app', '--region', 'europe-west6']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/micka-cloud-run-365208/golang-app', '.']
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/micka-cloud-run-365208/golang-app']
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args: ['run', 'deploy', 'golang-app', '--image', 'gcr.io/micka-cloud-run-365208/golang-app', '--region', 'europe-west6']
 images:
-- gcr.io/micka-cloud-run-365208/golang-app
+  - gcr.io/micka-cloud-run-365208/golang-app
+  
