--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,11 @@
 steps:
-  - name: 'registry.hub.docker.com/library/golang'
-    args: ['go', test']
+    # Run tests and save to file
+  - name: golang:1.18
+    entrypoint: /bin/bash
+    args:
+      - -c
+      - |
+        go test
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'gcr.io/micka-cloud-run-365208/golang-app', '.']
   - name: 'gcr.io/cloud-builders/docker'
