--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,10 @@ steps:
     # Run tests and save to file
   - name: golang:1.18
     entrypoint: /bin/bash
-    args: ['go', 'test']
+    args:
+      - -c
+      - | 
+        go test
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'europe-west6-docker.pkg.dev/micka-cloud-run-365208/golang-app', '.']
   - name: 'gcr.io/cloud-builders/docker'
