trying to ls after the container build

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,8 @@ steps:
         go test
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'europe-west6-docker.pkg.dev/micka-cloud-run-365208/golang-app', '.']
+  - name: 'ubuntu'
+    args: ['ls']
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'europe-west6-docker.pkg.dev/micka-cloud-run-365208/golang-app']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
